Revert "Merge remote-tracking branch 'origin/feature-integration-tests-refactor' into develop"
This reverts commit b6a94497b95e3411f024f27e3d13e3a144ed0bdc, reversing
changes made to e675172167c0bad0c20447bbd250449778a265d8.